--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="layer">
                     <h2>Spotify Clone</h2>
                     <p>A clone website of famous music brand Spotify made using HTML, CSS & JAVACSRIPT. </p>
-                    <a href="https://github.com/Shrey-Git24/Spotify_Clone.git"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://shrey-git24.github.io/Spotify_Clone/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work-2">
@@ -135,7 +135,7 @@
                     <a href="https://www.linkedin.com/in/shrey-pandey-8b23b1224/"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://github.com/Shrey-Git24"><i class="fa-brands fa-github"></i></a>
                 </div>
-                <a href="images/me.jpg" download class="btn">Download CV</a>
+                <a href="images/My Resume.pdf" download class="btn">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
