--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="layer">
                     <h2>Restaurant's Website</h2>
                     <p>A responsive website of a restaurant made using HTML, CSS & JAVACSRIPT. </p>
-                    <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work-3">
